[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
Pyrogram = "^1.4.12"
TgCrypto = "^1.2.3"
Flask = "^2.1.1"
google-api-python-client = "^2.43.0"
google = "^3.0.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"